--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/matthewwithanm/httpplease-promises.js.git"
+    "url": "git://github.com/matthewwithanm/httpplease-promises.git"
   },
   "keywords": [
     "xhr",
