--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Matthew Dapena-Tretter <m@tthewwithanm.com>"
   ],
   "description": "A plugin that adds promise support to httpplease",
-  "main": "lib/index.js",
+  "main": "./httpplease-promises.js",
   "keywords": [
     "xhr",
     "request",
